--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,10 @@
   "name": "iranimij/wp-options-manager",
   "description": "You can easily manage your plugin's options by this library",
   "type": "library",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license": "MIT",
   "autoload": {
-    "classmap": [ "" ]
+    "classmap": [ "src/" ]
   },
   "authors": [
     {
